[project]
name = "topicmodel"
version = "0.1.2"
authors = [{name = "S Anand", email = "root.node@gmail.com"}]
description = "Semantic document clustering and topic labeling"
readme = "README.md"
py-modules = ["topicmodel"]
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
  "httpx>=0.27",
  "pandas",
  "numpy",
  "scikit-learn",
  "tiktoken",
  "tqdm",
  "umap-learn>=0.5.6",
  "numba>=0.60",
  "llvmlite>=0.43",
  "rasterio>=1.4.3",
  "shapely>=2.1.1",
  "affine>=2.4.0",
  "geopandas>=1.1.1",
]

[project.scripts]
topicmodel = "topicmodel:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 100
extend-select = ["I"]
