[project]
name = "topicmodel"
version = "0.1.2"
authors = [{name = "S Anand", email = "root.node@gmail.com"}]
description = "Semantic document clustering and topic labeling"
readme = "README.md"
py-modules = ["topicmodel"]
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
  "httpx>=0.27",
  "pandas",
  "numpy",
  "scikit-learn",
  "tiktoken",
  "tqdm",
  "matplotlib>=3.10.5",
  "umap-learn>=0.5.6",
  "numba>=0.60",
  "llvmlite>=0.43",
  "scipy>=1.16.0",
  "seaborn>=0.13.2",
]

[project.scripts]
topicmodel = "topicmodel:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 100
extend-select = ["I"]
